<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_list_category"
            android:checkable="true"
            android:icon="@drawable/category"
            android:title="@string/books_by_category" />
        <item
            android:id="@+id/nav_books_by_author"
            android:checkable="true"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/books_by_author" />

        <group
            android:id="@+id/group_2"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_create_book"
                android:checkable="true"
                android:icon="@drawable/add_box"
                android:title="@string/add_new_book" />
            <item
                android:id="@+id/nav_edit_personal_valoration"
                android:checkable="true"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/edit_pers_eval" />
            <item
                android:id="@+id/nav_delete_book"
                android:checkable="true"
                android:icon="@drawable/delete"
                android:title="@string/delete_book" />
        </group>

            <group
                android:id="@+id/group_3"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_help"
                    android:checkable="true"
                    android:icon="@drawable/ic_help_black_24dp"
                    android:title="@string/help" />
                <item
                    android:id="@+id/nav_about"
                    android:checkable="true"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/about" />
            </group>

    </group>

</menu>