<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/parentlayout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" >

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:hint="@string/title"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/authorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" >

            <EditText
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:hint="@string/author"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/yearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" >

            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:hint="@string/year"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/publisherLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" >

            <EditText
                android:id="@+id/publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:hint="@string/publisher"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/categoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" >

            <EditText
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:hint="@string/category"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/evaluationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" >

            <EditText
                android:id="@+id/evaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:hint="@string/pers_eval"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>




</LinearLayout>

