<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_book_fragment"
    android:paddingTop="56dp"
    tools:context="com.mingo_blanch.pr_idi.bookshelf_app.MainActivity">
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/parentlayout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideOverlay"
    android:clipToPadding="false"
    android:paddingBottom="56dp" >

    <LinearLayout
        android:id="@+id/titleLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="12dp">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:paddingTop="18dp"
            android:paddingBottom="6dp"
            android:layout_gravity="center"
            android:contentDescription="@string/title"
            android:src="@drawable/book" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/titleTILayout"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/title"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/authorLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="12dp">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:paddingTop="18dp"
            android:paddingBottom="6dp"
            android:layout_gravity="center"
            android:contentDescription="@string/author"
            android:src="@drawable/person" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/authorTILayout"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/author"
                android:inputType="textPhonetic"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="12dp">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:paddingTop="18dp"
            android:paddingBottom="6dp"
            android:layout_gravity="center"
            android:contentDescription="@string/year"
            android:src="@drawable/clock" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/yearTILayout"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/year"
                android:maxLines="1"
                android:inputType="number"
                android:scrollHorizontally="true"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publisherLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="12dp">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:paddingTop="18dp"
            android:paddingBottom="6dp"
            android:layout_gravity="center"
            android:contentDescription="@string/year"
            android:src="@drawable/publisher" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/publisherTILayout"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/publisher"
                android:maxLines="1"
                android:inputType="textPhonetic"
                android:scrollHorizontally="true"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/categoryLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="12dp">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:paddingTop="18dp"
            android:paddingBottom="6dp"
            android:layout_gravity="center"
            android:contentDescription="@string/category"
            android:src="@drawable/category" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/categoryTILayout"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/category"
                android:maxLines="1"
                android:inputType="textPhonetic"
                android:scrollHorizontally="true"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/evalLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="12dp">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="64dp"
            android:paddingTop="26dp"
            android:paddingBottom="6dp"
            android:layout_gravity="center"
            android:contentDescription="@string/pers_eval"
            android:src="@drawable/evaluation" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="0dp" >
            <TextView
                android:id="@+id/evalLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textSize="12sp"
                android:paddingLeft="4dp"

                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/evalTILayout"
                android:layout_marginLeft="4dp"
                android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/evaluation"
                android:layout_marginLeft="-8dp"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textSize="16sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:background="@color/primary_dark_material_light" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout></ScrollView>